--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "start:dev": "ts-node-dev src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "test:functional": "jest --projects ./test --runInBand",
+    "test:unit": "jest",
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
     "style:check": "prettier --check src/**/*.ts test/**/*.ts",
     "style:fix": "prettier --write src/**/*.ts test/**/*.ts"
-
   },
   "repository": "https://github.com/Luixinho/node-typescript-api-WaldemarNeto.git",
   "author": "Luixinho <ticolucas7@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.17.12",
     "@types/jest": "^26.0.23",
     "@types/module-alias": "^2.0.0",
@@ -35,6 +36,7 @@
   },
   "dependencies": {
     "@overnightjs/core": "^1.7.6",
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "module-alias": "^2.2.2"
