--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/config": "^0.0.38",
     "@types/express": "^4.17.12",
     "@types/jest": "^26.0.23",
@@ -41,6 +42,7 @@
   "dependencies": {
     "@overnightjs/core": "^1.7.6",
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "config": "^3.3.6",
     "express": "^4.17.1",
