--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/express": "^4.17.12",
     "@types/jest": "^26.0.23",
     "@types/jsonwebtoken": "^8.5.2",
+    "@types/mocha": "^8.2.2",
     "@types/module-alias": "^2.0.0",
     "@types/mongoose": "^5.11.97",
     "@types/nock": "^11.1.0",
