--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "tsc",
     "start": "yarn build && node dist/src/index.js",
+    "start:local": "ts-node-dev --transpile-only src/index.ts | pino-pretty -c",
     "start:dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/index.ts",
     "test": "yarn test:unit && yarn test:functional",
     "test:functional": "jest --projects ./test --runInBand",
@@ -28,12 +29,14 @@
     "@types/mongoose": "^5.11.97",
     "@types/nock": "^11.1.0",
     "@types/node": "^15.12.2",
+    "@types/pino": "^6.3.8",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
     "eslint": "^7.28.0",
     "jest": "^27.0.4",
     "nock": "^13.1.0",
+    "pino-pretty": "^5.1.0",
     "prettier": "^2.3.1",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
@@ -49,6 +52,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
-    "mongoose": "^5.12.14"
+    "mongoose": "^5.12.14",
+    "pino": "^6.11.3"
   }
 }
