--- a/.github/workflows/full-workflow.yml
+++ b/.github/workflows/full-workflow.yml
@@ -34,7 +34,7 @@ jobs:
       run: yarn --frozen-lockfile
 
     - name: Run all tests
-      run: yarn test
+      run: npm run test
 
     - shell: bash
       if: github.ref == 'refs/heads/master'
