--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "yarn build && node dist/src/index.js",
+    "start": "npm run build && node dist/src/index.js",
     "start:local": "ts-node-dev --transpile-only src/index.ts | pino-pretty -c",
     "start:dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/index.ts",
-    "test": "yarn test:unit && yarn test:functional",
+    "test": "npm run test:unit && npm run test:functional",
     "test:functional": "jest --projects ./test --runInBand",
     "test:unit": "jest",
     "lint": "eslint ./src ./test --ext .ts",
